front-end: details page until highlights

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -34,7 +34,7 @@
       "path": "index.pug",
       "imports": [
         "components/nav.pug",
-        "pages/results.pug",
+        "pages/details.pug",
         "components/footer.pug"
       ]
     },
