--- a/prepros-6.config
+++ b/prepros-6.config
@@ -9,7 +9,7 @@
     },
     {
       "path": "style/main.sass",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/main.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/main.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
