front-end: details

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -13,10 +13,7 @@
     }
   ],
   "fileTree": {
-    "expandedDirs": [
-      "style",
-      "dist"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
