front-end: confirm

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -31,7 +31,7 @@
       "path": "index.pug",
       "imports": [
         "components/nav.pug",
-        "pages/details.pug",
+        "pages/confirm.pug",
         "components/footer.pug"
       ]
     },
