--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "gatsby": "^2.1.31",
+    "gatsby-plugin-netlify-cms": "^3.0.14",
+    "netlify-cms": "^2.6.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
