--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,6 +19,7 @@ collections:
     preview_path: "tour/{{title}}"
     fields:
       - {label: "Title", name: "title", widget: "string", required: true}
+      - {label: "Path", name: "path", widget: "string", required: true, default: "/tour/"}
       - {label: "Starting location", name: "starts", widget: "string", required: true}
       - {label: "Number of destinations", name: "destinations", widget: "number", min: 1, max: 101, valueType: "int", required: true}
       - {label: "Ending location", name: "ends", widget: "string", required: true}
