--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -36,7 +36,7 @@ collections:
           - {label: Title, name: title, widget: string, default: "Introduction", required: true}
           - {label: Description, name: desc, widget: string, required: true, default: "A descriptive paragraph goes here"}
       - label: "What's Included" 
-        name: "inlcuded"
+        name: "included"
         widget: "list"
         fields: 
           - {label: Title, name: title, widget: string, default: "Tour Coordinator", required: true}
