--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,9 +25,11 @@ collections:
       - {label: "Number of destinations", name: "destinations", widget: "number", min: 1, max: 101, valueType: "int", required: true}
       - {label: "Ending location", name: "ends", widget: "string", required: true}
       - {label: "Highlights paragraph", name: "highlights", widget: "string", required: true}
+      - {label: "Highlights image", name: "imgtwo", widget: "image", required: true}
       - {label: "Age range minimum", name: "minage", widget: "number", required: true, default: 2, valueType: "int"}
       - {label: "Group size minimum", name: "mingroup", widget: "number", default: 1, valueType: "int", required: true}
       - {label: "Travel style", name: "travelstyle", widget: "string", required: true, default: "Cultural Discovery"}
+      - {label: "Itinerary image", name: "imgthree", widget: "image", required: true}
       - { label: "Itinerary PDF Link", name: "itinerary-url", type: "string", required: true, default: "http://www.gracebrunei.com/tours"}
       - label: "Itinerary" 
         name: "itinerary"
