--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "gatsby": "^2.1.31",
     "gatsby-plugin-netlify-cms": "^3.0.14",
+    "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-source-filesystem": "^2.0.25",
     "gatsby-transformer-remark": "^2.3.3",
     "netlify-cms": "^2.6.1",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-helmet": "^5.2.0"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
