--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
+    "emailjs-com": "^2.3.2",
+    "firebase": "^5.9.1",
     "gatsby": "^2.1.31",
     "gatsby-plugin-netlify-cms": "^3.0.14",
     "gatsby-plugin-react-helmet": "^3.0.10",
