--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 [build]
   command = "npm run build"
   functions = "functions"
-  publish = "."
+  publish = "public"
 
 ## Uncomment to use this redirect for Single Page Applications. 
 ## Not needed for static site generators.
