updated data structure

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -35,8 +35,9 @@ collections:
         name: "blocks"
         widget: "list"
         fields: 
-          - label: "Block"
-            name: "block"
+          - {label: Title, name: title, widget: string, default: "Block title"}
+          - label: "Block Items"
+            name: "blockitems"
             widget: "list"
             default: ["item 1", "item 2"]
 
