--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   },
   "dependencies": {
     "emailjs-com": "^2.3.2",
-    "firebase": "^6.0.2",
+    "firebase": "^5.9.1",
     "gatsby": "^2.5.5",
     "gatsby-plugin-netlify-cms": "^3.0.14",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-source-filesystem": "^2.0.25",
     "gatsby-transformer-remark": "^2.3.3",
+    "idb": "^4.0.3",
     "netlify-cms": "^2.9.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
