--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "emailjs-com": "^2.3.2",
     "firebase": "^5.9.1",
     "gatsby": "^2.5.5",
+    "gatsby-plugin-netlify": "^2.0.17",
     "gatsby-plugin-netlify-cms": "^3.0.14",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-source-filesystem": "^2.0.25",
